# snake_game

./: .gitignore  .travis.yml  Apple.h  Board.h  CMakeLists.txt  Controller.h  InfoBox.h  Player.h  Position.h  README.md  Renderer.h  Snake.h  main.cpp
interface/: IApple.h
src/: apple.cpp  board.cpp  controller.cpp  infoBox.cpp  player.cpp  position.cpp  renderer.cpp  snake.cpp
test/: test.cpp
